tests/ui/errors/remap-path-prefix.without-diagnostic-scope.stderr
error[E0425]: cannot find value `ferris` in this scope
  --> $DIR/remap-path-prefix.rs:15:5
   |
LL |     ferris
   |     ^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
